--- a/pom.xml
+++ b/pom.xml
@@ -209,5 +209,17 @@ limitations under the License.
       <artifactId>activation</artifactId>
       <version>1.1</version>
     </dependency>
+	  <dependency>
+		  <groupId>junit</groupId>
+		  <artifactId>junit</artifactId>
+		  <version>4.11</version>
+		  <scope>test</scope>
+	  </dependency>
+	  <dependency>
+		  <groupId>nz.ac.auckland.composite</groupId>
+		  <artifactId>composite-logging-deploy</artifactId>
+		  <version>3.4</version>
+		  <scope>test</scope>
+	  </dependency>
   </dependencies>
 </project>
